--- a/events.html
+++ b/events.html
@@ -7,6 +7,24 @@
     <title>Kalender</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="60x60" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="72x72" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="76x76" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="114x114" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="120x120" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="144x144" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="152x152" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="icon" type="image/png" sizes="192x192" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="icon" type="image/png" sizes="96x96" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <header>
     <nav>
@@ -51,7 +69,7 @@
         </section>
     </template>
 
-<footer>
+    <footer>
         <div class="flogo"></div>
         <div class="some">
             <div class="insta"></div>
@@ -94,6 +112,4 @@
         }
     </script>
 
-</body>
-
-</html>
+</body></html>
