--- a/stevnsklint.html
+++ b/stevnsklint.html
@@ -2,61 +2,79 @@
 <html lang="da">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Stevns klint</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stevns klint</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="60x60" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="72x72" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="76x76" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="114x114" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="120x120" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="144x144" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="152x152" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="icon" type="image/png" sizes="192x192" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="icon" type="image/png" sizes="96x96" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="/materiale/Billeder/favicon-100.jpg">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <header>
-	<nav>
-		<div id="left">
-			<a href="index.html">
-				<div id="logo"></div>
-			</a>
-		</div>
-		<div id="right">
-			<div class="dropdown">
-				<a>Besøg os<i class="fa fa-angle-down"></i></a>
-				<div class="dropdown-content">
-					<a href="visit.html">Information</a>
-					<a href="stevnsfort.html">Stevns fort</a>
-					<a href="geomuseum.html">Geofaxe museum</a>
-					<a href="stevnsklint.html">Stevns klint</a>
-				</div>
-			</div>
-			<a href="undervisning.html">Undervisning</a>
-			<a href="events.html">Events</a>
-			<a href="kontakt.html">Kontakt os</a>
-			<a href="billet.html">Køb billet</a>
-		</div>
-	</nav>
+    <nav>
+        <div id="left">
+            <a href="index.html">
+                <div id="logo"></div>
+            </a>
+        </div>
+        <div id="right">
+            <div class="dropdown">
+                <a>Besøg os<i class="fa fa-angle-down"></i></a>
+                <div class="dropdown-content">
+                    <a href="visit.html">Information</a>
+                    <a href="stevnsfort.html">Stevns fort</a>
+                    <a href="geomuseum.html">Geofaxe museum</a>
+                    <a href="stevnsklint.html">Stevns klint</a>
+                </div>
+            </div>
+            <a href="undervisning.html">Undervisning</a>
+            <a href="events.html">Events</a>
+            <a href="kontakt.html">Kontakt os</a>
+            <a href="billet.html">Køb billet</a>
+        </div>
+    </nav>
 </header>
 
 <body>
 
 
-	<div id="klint">
-		<h1>Stevns klint</h1>
+    <div id="klint">
+        <h1>Stevns klint</h1>
 
-		<div class="splash"><img src="materiale/Billeder/Artboard%201.png"></div>
+        <div class="splash"><img src="materiale/Billeder/Artboard%201.png"></div>
 
-		<div class="info">
-			<div class="text1">
-				<h2>Unesco verdensarv</h2>
-				<p>Et dramatisk kapitel i Jordens historie gemmer sig i klinten. Et ganske tyndt lag af Fiskeler fortæller historien om, hvordan dinosaurerne og halvdelen af alle dyrearter blev udslettet for 66 millioner år siden, da en asteroide ramte Jorden.<br>
-					Verdensarven er den anerkendelse og forpligtelse, som UNESCO gav Stevns Klint i 2014. Klinten er UNESCO Verdensarv, for mellem de tykke lag af kridt og kalk i Stevns Klint gemmer sig fortællinger om et dramatisk kapitel i Jordens historie et ganske tynd lag af fiskeler fortæller historier om, hvordan mere en halvdelen af alle dyr- og plantearter på Jordens uddøde for 66 millioner år siden, da en asterolde slog ned. Og Stevns Klint er det bedste sted i verden at se dette dramatiske lag.
-					UNESCO Verdensarv betyder, at stedet har en særlig universiel betydning for hele menneskeheden, for nutidige og fremtidige generationer. Så pas godt på stedet, når du besøger det!
-				</p>
-			</div>
-			<a href="visit.html"><button>BESØG Os</button></a>
-			<div class="map"><img src="materiale/Billeder/UNESCO_logo.svg.png"></div>
-		</div>
-	</div>
+        <div class="info">
+            <div class="text1">
+                <h2>Unesco verdensarv</h2>
+                <p>Et dramatisk kapitel i Jordens historie gemmer sig i klinten. Et ganske tyndt lag af Fiskeler fortæller historien om, hvordan dinosaurerne og halvdelen af alle dyrearter blev udslettet for 66 millioner år siden, da en asteroide ramte Jorden.<br>
+                    Verdensarven er den anerkendelse og forpligtelse, som UNESCO gav Stevns Klint i 2014. Klinten er UNESCO Verdensarv, for mellem de tykke lag af kridt og kalk i Stevns Klint gemmer sig fortællinger om et dramatisk kapitel i Jordens historie et ganske tynd lag af fiskeler fortæller historier om, hvordan mere en halvdelen af alle dyr- og plantearter på Jordens uddøde for 66 millioner år siden, da en asterolde slog ned. Og Stevns Klint er det bedste sted i verden at se dette dramatiske lag.
+                    UNESCO Verdensarv betyder, at stedet har en særlig universiel betydning for hele menneskeheden, for nutidige og fremtidige generationer. Så pas godt på stedet, når du besøger det!
+                </p>
+            </div>
+            <a href="visit.html"><button>BESØG Os</button></a>
+            <div class="map"><img src="materiale/Billeder/UNESCO_logo.svg.png"></div>
+        </div>
+    </div>
 
 
-<footer>
+    <footer>
         <div class="flogo"></div>
         <div class="some">
             <div class="insta"></div>
@@ -66,6 +84,4 @@
             <p>By gruppe 6B</p>
         </div>
     </footer>
-</body>
-
-</html>
+</body></html>
