--- a/index.html
+++ b/index.html
@@ -57,19 +57,36 @@
     <div class="museums">
         <div id="top">
             <div id="stevnsfort">
-                <h1>Stevnsfort</h1><a href="stevnsfort.html"><img src="materiale/Billeder/IMG_3615.PNG"></a>
+                <h1>Stevnsfort</h1><a href="stevnsfort.html">
+                    <div class="container"><img src="materiale/Billeder/IMG_3615.PNG">
+                        <div class="overlay">
+                            <p>UDFORSK</p>
+                        </div>
+                    </div>
+                </a>
             </div>
 
             <div id="geomuseum">
                 <h1>Geofaxe museum</h1>
-                <a href="geomuseum.html"><img src="materiale/Billeder/IMG_3614.PNG"></a>
+                <a href="geomuseum.html">
+                    <div class="container"><img src="materiale/Billeder/IMG_3614.PNG">
+                        <div class="overlay">
+                            <p>UDFORSK</p>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
 
         <div id="bottom">
             <div id="stevnsklint">
                 <h1>Stevnsklint</h1>
-                <a href="stevnsklint.html"><img src="materiale/Billeder/IMG_3617.PNG">
+                <a href="stevnsklint.html">
+                    <div class="container"><img src="materiale/Billeder/IMG_3617.PNG">
+                        <div class="overlay">
+                            <p>UDFORSK</p>
+                        </div>
+                    </div>
                 </a>
             </div>
         </div>
