--- a/undervisning.html
+++ b/undervisning.html
@@ -121,6 +121,25 @@
             </button>
         </div>
 
+
+        <div class="row">
+            <div class="column">
+                <img src="materiale/Billeder/IMG_20180115_124546.jpg">
+                <img src="materiale/Billeder/IMG_20180812_105439.jpg">
+                <img src="materiale/Billeder/IMG_20180812_115437_01.jpg">
+            </div>
+            <div class="column">
+                <img src="materiale/Billeder/Sk%C3%A6rmbillede%202019-04-29%20kl.%2010.37.25.png">
+                <img src="materiale/Billeder/kalkbrud%202014%20016.JPG">
+                <img src="materiale/Billeder/DSCF1788.JPG">
+            </div>
+            <div class="column">
+                <img src="materiale/Billeder/IMG_20180919_124041.jpg">
+                <img src="materiale/Billeder/fossiljagt.jpg">
+                <img src="materiale/Billeder/Fossiljagt%202.JPG">
+            </div>
+        </div>
+
     </div>
     <footer>
         <div class="flogo"></div>
