--- a/billet.html
+++ b/billet.html
@@ -61,6 +61,8 @@
         <div id="partone">
             <h1>Dagsbilletter</h1>
             <p>Billetten giver adgang til alle museer for en dag.</p>
+            <h2>OBS!</h2>
+            <p>For at besøge Stevnsfortet skal ALLE besøgende registreres, da der max må være 30 deltagere på hver tur. </p>
 
             <a href="">Køb Årskort</a>
             <a href="">Køb Gavekort</a>
