--- a/billet.html
+++ b/billet.html
@@ -43,7 +43,7 @@
                 <div class="dropdown-content">
                     <a href="visit.html">Information</a>
                     <a href="stevnsfort.html">Stevns fort</a>
-                    <a href="geomuseum.html">Geofaxe museum</a>
+                    <a href="geomuseum.html">Geomuseum Faxe</a>
                     <a href="stevnsklint.html">Stevns klint</a>
                 </div>
             </div>
@@ -161,7 +161,12 @@
             document.getElementById("number3").innerHTML++;
         }
 
-    </script>
-</body>
+        function sub4() {
+            document.getElementById("number4").innerHTML--;
+        }
 
-</html>
+        function add4() {
+            document.getElementById("number4").innerHTML++;
+        }
+    </script>
+</body></html>
