--- a/stevnsfort.html
+++ b/stevnsfort.html
@@ -40,7 +40,7 @@
                 <div class="dropdown-content">
                     <a href="visit.html">Information</a>
                     <a href="stevnsfort.html">Stevns fort</a>
-                    <a href="geomuseum.html">Geofaxe museum</a>
+                    <a href="geomuseum.html">Geomuseum Faxe</a>
                     <a href="stevnsklint.html">Stevns klint</a>
                 </div>
             </div>
