--- a/geomuseum.html
+++ b/geomuseum.html
@@ -40,7 +40,7 @@
                 <div class="dropdown-content">
                     <a href="visit.html">Information</a>
                     <a href="stevnsfort.html">Stevns fort</a>
-                    <a href="geomuseum.html">Geofaxe museum</a>
+                    <a href="geomuseum.html">Geomuseum Faxe</a>
                     <a href="stevnsklint.html">Stevns klint</a>
                 </div>
             </div>
@@ -55,7 +55,7 @@
 <body>
 
     <div id="geo">
-        <h1>Geofaxe museum</h1>
+        <h1>Geomuseum Faxe</h1>
 
         <div class="splash"><img src="materiale/Billeder/Artboard%202.png"></div>
 
