--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="dropdown-content">
                     <a href="visit.html">Information</a>
                     <a href="stevnsfort.html">Stevns fort</a>
-                    <a href="geomuseum.html">Geofaxe museum</a>
+                    <a href="geomuseum.html">Geomuseum Faxe</a>
                     <a href="stevnsklint.html">Stevns klint</a>
                 </div>
             </div>
@@ -67,7 +67,7 @@
             </div>
 
             <div id="geomuseum">
-                <h1>Geofaxe museum</h1>
+                <h1>Geomuseum Faxe</h1>
                 <a href="geomuseum.html">
                     <div class="container"><img src="materiale/Billeder/IMG_3614.PNG">
                         <div class="overlay">
@@ -100,7 +100,7 @@
     </div>
 
     <div id="gethere">
-        <h1>Rutevejledning</h1>
+        <h1>Kort</h1>
         <div id="map"></div>
     </div>
 
